# rawspeak

./: .gitignore  README.md  app_entry.py  backend_entry.py  pyproject.toml  rawspeak.spec  requirements.txt
.github/ISSUE_TEMPLATE/: agent-task.md
.github/workflows/: release.yml
assets/: RawSpeak.icns
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: index.html  renderer.js  styles.css
rawspeak/: __init__.py  audio.py  cleaner.py  config.py  history.py  hotkey.py  launcher.py  main.py  paste.py  transcriber.py  tray.py  ui.py
scripts/: build_dmg.sh
tests/: test_audio.py  test_cleaner.py  test_config.py  test_launcher.py  test_paste.py  test_transcriber.py
